--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "main": "bot.js",
   "scripts": {
-    "start": "node bot.js"
+    "test": "node bot.js"
   },
   "dependencies": {
     "asciify": "^1.3.5",
