--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "public-ip": "^3.1.0",
     "signale": "^1.4.0",
     "syncprompt": "^2.0.0",
-    "util": "^0.12.1"
+    "util": "^0.12.1",
+    "wikipedia-js": "0.0.6"
   },
   "repository": {
     "type": "git",
