Added prefix to new file, seperate from the tokens. This has happend for ease of access

--- a/config.json
+++ b/config.json
@@ -1,8 +1,4 @@
 {
-	"token": "token-here",
-	"prefix": "s!",
-	"devprefix": "s~",
-	"mathprefix": "sm!",
-	"musicprefix": "s?",
+	"token": "NjAzMTMwODUxMzAzMDk2MzUw.XT_e7g.TOwrQZo4gZCHGYXgUFmqPdNm9Rs",
 	"ytapi": "youtube-api-token"
 }
