--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "main": "bot.js",
   "scripts": {
-    "test": "node bot.js"
+    "start": "node bot.js",
+    "test": "node debug.js"
   },
   "dependencies": {
     "asciify": "^1.3.5",
@@ -20,7 +21,10 @@
     "jquery": "^3.4.1",
     "opusscript": "0.0.6",
     "public-ip": "^3.1.0",
+    "replace": "^1.1.0",
+    "replace-string": "^3.0.0",
     "signale": "^1.4.0",
+    "strman.replace": "^2.0.0",
     "syncprompt": "^2.0.0",
     "util": "^0.12.1",
     "wikipedia-js": "0.0.6"
