--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-	"token": "NjAzMTMwODUxMzAzMDk2MzUw.XT_e7g.TOwrQZo4gZCHGYXgUFmqPdNm9Rs",
+	"token": "bot-token-goes-here",
 	"ytapi": "youtube-api-token"
 }
