--- a/package.json
+++ b/package.json
@@ -38,5 +38,5 @@
   "bugs": {
     "url": "https://github.com/discordseedbot/canary/issues"
   },
-  "homepage": "http://jyles.club/seedbot"
+  "homepage": "http://seedbot.jyles.club"
 }
