Migrating to Modules s!magic8ball is broken, need to fix.

--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-	"token": "bot-token-goes-here",
+	"token": "NjAzMTMwODUxMzAzMDk2MzUw.XW340w.E0GC3nTQH_xV7-mvkJYbACGkYRY",
 	"ytapi": "youtube-api-token"
 }
