--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "branch": "canary",
   "name": "SeedBot",
   "version": "1.2.8",
-  "build": "915",
+  "build": "916",
   "description": "SeedBot Canary",
   "ownerID": "230485481773596672",
   "engines": {
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "asciify": "^1.3.5",
+    "axios": "^0.19.0",
     "child_process": "^1.0.2",
     "discord.js": "^11.5.1",
     "discord.js-musicbot-addon": "^13.5.2",
