--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "rebuild": "^0.1.2",
     "signale": "^1.4.0",
     "syncprompt": "^2.0.0",
-    "util": "^0.12.1"
+    "util": "^0.12.1",
+    "youtube-info": "^1.3.2"
   },
   "repository": {
     "type": "git",
