--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "signale": "^1.4.0",
     "syncprompt": "^2.0.0",
     "util": "^0.12.1",
-    "youtube-info": "^1.3.2"
+    "ytdl-core": "^0.29.7"
   },
   "repository": {
     "type": "git",
