--- a/package.json
+++ b/package.json
@@ -1,42 +1,34 @@
 {
-  "branch": "canary",
+  "branch": "canary-modular",
   "name": "SeedBot",
-  "version": "1.2.8",
-  "build": "916",
-  "description": "SeedBot Canary",
+  "version": "1.3.3",
+  "build": "860",
+  "description": "A Discord Bot for Developers by Developers, and some basic functions that every bot has.",
   "ownerID": "230485481773596672",
   "engines": {
     "node": "8.16.0"
   },
   "main": "bot.js",
   "scripts": {
-    "start": "node bot.js",
-    "test": "node debug.js"
+    "start": "node bot.js"
   },
   "dependencies": {
-    "axios": "^0.19.0",
     "child_process": "^1.0.2",
     "discord.js": "^11.5.1",
     "discord.js-musicbot-addon": "^13.5.2",
     "external-ip": "^2.1.1",
-    "figlet": "^1.2.4",
-    "node-gyp": "^5.0.3",
+    "figlet": "^1.2.3",
     "opusscript": "0.0.6",
-    "rebuild": "^0.1.2",
-    "rxjs": "^6.5.3",
-    "signale": "^1.4.0",
-    "syncprompt": "^2.0.0",
-    "util": "^0.12.1",
-    "ytdl-core": "^0.29.7"
+    "signale": "^1.4.0"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/discordseedbot/canary.git"
   },
   "author": "Jyles Coad-Ward [jyles@dariox.club]",
-  "license": "MIT",
+  "license": "GPL-3.0-or-later",
   "bugs": {
     "url": "https://github.com/discordseedbot/canary/issues"
   },
-  "homepage": "http://seedbot.jyles.club"
+  "homepage": "https://seedbot.xyz"
 }
