--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "child_process": "^1.0.2",
+    "curl-request": "^1.1.1",
     "discord.js": "^11.5.1",
     "discord.js-musicbot-addon": "^13.5.2",
     "external-ip": "^2.1.1",
