--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "branch": "canary-modular",
   "name": "SeedBot",
   "version": "1.3.3",
-  "build": "862",
+  "build": ["863","21-10-2019"],
   "description": "A Discord Bot for Developers by Developers, and some basic functions that every bot has.",
   "ownerID": "230485481773596672",
   "engines": {
