--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "branch": "canary-modular",
+  "branch": "canary",
   "name": "SeedBot",
   "version": "1.3.3",
   "build": [
-    "863",
-    "21-10-2019"
+    "865",
+    "22-10-2019"
   ],
   "description": "A Discord Bot for Developers by Developers, and some basic functions that every bot has.",
   "ownerID": "230485481773596672",
